sys/prebuilt-bindings/geos_3.11.rs

extern "C" {
    #[doc = " Create an empty geometry collection."]
    #[doc = " \\param type The geometry type, enumerated by \\ref GEOSGeomTypes"]
    #[doc = " \\return A newly allocated empty geometry collection. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_createEmptyCollection(type_: libc::c_int) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Create a rectangular polygon from bounding coordinates."]
    #[doc = " Will return a point geometry if width and height are 0."]
    #[doc = " \\param xmin Left bound of envelope"]
    #[doc = " \\param ymin Lower bound of envelope"]
    #[doc = " \\param xmax Right bound of envelope"]
    #[doc = " \\param ymax Upper bound of envelope"]
    pub fn GEOSGeom_createRectangle(
        xmin: f64,
        ymin: f64,
        xmax: f64,
        ymax: f64,
    ) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Create a new copy of the input geometry."]
    #[doc = " \\param g The geometry to copy"]
    #[doc = " \\return A newly allocated geometry. NULL on exception."]
    #[doc = " Caller is responsible for freeing with GEOSGeom_destroy()."]
    pub fn GEOSGeom_clone(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Release the memory associated with a geometry."]
    #[doc = " \\param g The geometry to be destroyed."]
    pub fn GEOSGeom_destroy(g: *mut GEOSGeometry);
}
extern "C" {
    #[doc = " Returns the geometry type string for this geometry."]
    #[doc = " eg: \"GeometryCollection\", \"LineString\""]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return A string with the geometry type."]
    #[doc = " Caller must free with GEOSFree()."]
    #[doc = " NULL on exception."]
    pub fn GEOSGeomType(g: *const GEOSGeometry) -> *mut libc::c_char;
}
extern "C" {
    #[doc = " Returns the \\ref GEOSGeomTypeId number for this geometry."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return The geometry type number, or -1 on exception."]
    pub fn GEOSGeomTypeId(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Returns the \"spatial reference id\" (SRID) for this geometry."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return SRID number or 0 if unknown / not set."]
    pub fn GEOSGetSRID(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Return the anonymous \"user data\" for this geometry."]
    #[doc = " User data must be managed by the caller, and freed before"]
    #[doc = " the geometry is freed."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return A void* to the user data, caller is responsible for"]
    #[doc = "         casting to the appropriate type and freeing."]
    pub fn GEOSGeom_getUserData(g: *const GEOSGeometry) -> *mut libc::c_void;
}
extern "C" {
    #[doc = " Returns the number of sub-geometries immediately under a"]
    #[doc = " multi-geometry or collection or 1 for a simple geometry."]
    #[doc = " For nested collections, remember to check if returned"]
    #[doc = " sub-geometries are **themselves** also collections."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return Number of direct children in this collection"]
    #[doc = " \\warning For GEOS < 3.2 this function may crash when fed simple geometries"]
    pub fn GEOSGetNumGeometries(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Returns the specified sub-geometry of a collection. For"]
    #[doc = " a simple geometry, returns a pointer to the input."]
    #[doc = " Returned object is a pointer to internal storage:"]
    #[doc = " it must NOT be destroyed directly."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\param n Sub-geometry index, zero-base"]
    #[doc = " \\return A const \\ref GEOSGeometry, do not free!"]
    #[doc = "It will be freed when the parent is freed."]
    #[doc = "Returns NULL on exception."]
    #[doc = " \\note Up to GEOS 3.2.0 the input geometry must be a Collection, in"]
    #[doc = "       later versions it doesn't matter (getGeometryN(0) for a single will"]
    #[doc = "       return the input)."]
    pub fn GEOSGetGeometryN(g: *const GEOSGeometry, n: libc::c_int) -> *const GEOSGeometry;
}
extern "C" {
    #[doc = " Read the currently set precision value from the"]
    #[doc = " geometry and returns the grid size if it is a fixed"]
    #[doc = " precision or 0.0 if it is full floating point precision."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return The grid size, or -1 on exception"]
    pub fn GEOSGeom_getPrecision(g: *const GEOSGeometry) -> f64;
}
extern "C" {
    #[doc = " Returns the number of interior rings, for a Polygon input, or"]
    #[doc = " an exception otherwise."]
    #[doc = " \\param g Input Polygon geometry"]
    #[doc = " \\return Number of interior rings, -1 on exception"]
    pub fn GEOSGetNumInteriorRings(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Returns the number of points, for a LineString input, or"]
    #[doc = " an exception otherwise."]
    #[doc = " \\param g Input LineString geometry"]
    #[doc = " \\return Number of points, -1 on exception"]
    pub fn GEOSGeomGetNumPoints(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Returns the X coordinate, for a Point input, or an"]
    #[doc = " exception otherwise."]
    #[doc = " \\param[in] g Input Point geometry"]
    #[doc = " \\param[out] x Pointer to hold return value"]
    #[doc = " \\returns 1 on success, 0 on exception"]
    pub fn GEOSGeomGetX(g: *const GEOSGeometry, x: *mut f64) -> libc::c_int;
}
extern "C" {
    #[doc = " Returns the Y coordinate, for a Point input, or an"]
    #[doc = " exception otherwise."]
    #[doc = " \\param[in] g Input Point geometry"]
    #[doc = " \\param[out] y Pointer to hold return value"]
    #[doc = " \\returns 1 on success, 0 on exception"]
    pub fn GEOSGeomGetY(g: *const GEOSGeometry, y: *mut f64) -> libc::c_int;
}
extern "C" {
    #[doc = " Returns the Z coordinate, for a Point input, or an"]
    #[doc = " exception otherwise."]
    #[doc = " \\param[in] g Input Point geometry"]
    #[doc = " \\param[out] z Pointer to hold return value"]
    #[doc = " \\returns 1 on success, 0 on exception"]
    pub fn GEOSGeomGetZ(g: *const GEOSGeometry, z: *mut f64) -> libc::c_int;
}
extern "C" {
    #[doc = " Returns the N'th ring for a Polygon input."]
    #[doc = " \\note Returned object is a pointer to internal storage:"]
    #[doc = "       it must NOT be destroyed directly."]
    #[doc = " \\param g Input Polygon geometry"]
    #[doc = " \\param n Index of the desired ring"]
    #[doc = " \\return LinearRing geometry. Owned by parent geometry, do not free. NULL on exception."]
    pub fn GEOSGetInteriorRingN(g: *const GEOSGeometry, n: libc::c_int) -> *const GEOSGeometry;
}
extern "C" {
    #[doc = " Get the external ring of a Polygon."]
    #[doc = " \\note Returned object is a pointer to internal storage:"]
    #[doc = "       it must NOT be destroyed directly."]
    #[doc = " \\param g Input Polygon geometry"]
    #[doc = " \\return LinearRing geometry. Owned by parent geometry, do not free. NULL on exception."]
    pub fn GEOSGetExteriorRing(g: *const GEOSGeometry) -> *const GEOSGeometry;
}
extern "C" {
    #[doc = " Get the total number of points in a geometry,"]
    #[doc = " of any type."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return Number of points in the geometry. -1 on exception."]
    pub fn GEOSGetNumCoordinates(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Return the coordinate sequence underlying the"]
    #[doc = " given geometry (Must be a LineString, LinearRing or Point)."]
    #[doc = " Do not directly free the coordinate sequence, it is owned by"]
    #[doc = " the parent geometry."]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return Coordinate sequence or NULL on exception."]
    pub fn GEOSGeom_getCoordSeq(g: *const GEOSGeometry) -> *const GEOSCoordSequence;
}
extern "C" {
    #[doc = " Return the planar dimensionality of the geometry."]
    #[doc = ""]
    #[doc = " - 0 for point, multipoint"]
    #[doc = " - 1 for linestring, multilinestring"]
    #[doc = " - 2 for polygon, multipolygon"]
    #[doc = ""]
    #[doc = " \\see geos::geom::Dimension::DimensionType"]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return The dimensionality"]
    pub fn GEOSGeom_getDimensions(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Return the cartesian dimension of the geometry."]
    #[doc = ""]
    #[doc = " - 2 for XY data"]
    #[doc = " - 3 for XYZ data"]
    #[doc = ""]
    #[doc = " \\param g Input geometry"]
    #[doc = " \\return The dimension"]
    pub fn GEOSGeom_getCoordinateDimension(g: *const GEOSGeometry) -> libc::c_int;
}
extern "C" {
    #[doc = " Finds the minimum X value in the geometry."]
    #[doc = " \\param[in] g Input geometry"]
    #[doc = " \\param[out] value Pointer to place result"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSGeom_getXMin(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    #[doc = " Finds the minimum Y value in the geometry."]
    #[doc = " \\param[in] g Input geometry"]
    #[doc = " \\param[out] value Pointer to place result"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSGeom_getYMin(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    #[doc = " Finds the maximum X value in the geometry."]
    #[doc = " \\param[in] g Input geometry"]
    #[doc = " \\param[out] value Pointer to place result"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSGeom_getXMax(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    #[doc = " Finds the maximum Y value in the geometry."]
    #[doc = " \\param[in] g Input geometry"]
    #[doc = " \\param[out] value Pointer to place result"]
    #[doc = " \\return 0 on exception"]
    pub fn GEOSGeom_getYMax(g: *const GEOSGeometry, value: *mut f64) -> libc::c_int;
}
extern "C" {
    #[doc = " Finds the extent (minimum and maximum X and Y value) of the geometry."]
    #[doc = " Raises an exception for empty geometry input."]
    #[doc = ""]
    #[doc = " \\param[in] g Input geometry"]
    #[doc = " \\param[out] xmin Pointer to place result for minimum X value"]
    #[doc = " \\param[out] ymin Pointer to place result for minimum Y value"]
    #[doc = " \\param[out] xmax Pointer to place result for maximum X value"]
    #[doc = " \\param[out] ymax Pointer to place result for maximum Y value"]
    #[doc = " \\return 1 on success, 0 on exception"]
    pub fn GEOSGeom_getExtent(
        g: *const GEOSGeometry,
        xmin: *mut f64,
        ymin: *mut f64,
        xmax: *mut f64,
        ymax: *mut f64,
    ) -> libc::c_int;
}
extern "C" {
    #[doc = " Return the N'th point of a LineString"]
    #[doc = " \\param g Input geometry, must be a LineString"]
    #[doc = " \\param n Index of desired point (zero based)"]
    #[doc = " \\return A Point geometry."]
    #[doc = "         Caller must free with GEOSGeom_destroy()"]
    #[doc = "         NULL on exception."]
    pub fn GEOSGeomGetPointN(g: *const GEOSGeometry, n: libc::c_int) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Return the first point of a LineString"]
    #[doc = " \\param g Input geometry, must be a LineString"]
    #[doc = " \\return A Point geometry."]
    #[doc = "         Caller must free with GEOSGeom_destroy()"]
    #[doc = "         NULL on exception."]
    pub fn GEOSGeomGetStartPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
extern "C" {
    #[doc = " Return the last point of a LineString"]
    #[doc = " \\param g Input geometry, must be a LineString"]
    #[doc = " \\return A Point geometry."]
    #[doc = "         Caller must free with GEOSGeom_destroy()"]
    #[doc = "         NULL on exception."]
    pub fn GEOSGeomGetEndPoint(g: *const GEOSGeometry) -> *mut GEOSGeometry;
}
